test/Fail/SmartRewriteIndirectLoop.err
SmartRewriteIndirectLoop.agda:8.1-10: warning: -W[no]RewriteRHSContainsClosures
_ : f x ≡ (λ y → f y y)  is not a legal rewrite rule, since the
right-hand side of a rewrite rule introduced by smart with contains
unguarded lambdas (which can cause non-termination)
when checking that the pattern refl has type f x ≡ (λ y → f y y)

SmartRewriteIndirectLoop.agda:8.1-10: error: [InvalidatedLocalRewriteRule]
Local rewrite rule invalidated after a pattern-match
when checking that the pattern refl has type f x ≡ (λ y → f y y)
